--- a/exps/llms_eval.ipynb
+++ b/exps/llms_eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -382,6 +382,18 @@
        "      <td>0.713791</td>\n",
        "      <td>0.536269</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cot1p1</td>\n",
+       "      <td>ll3</td>\n",
+       "      <td>S</td>\n",
+       "      <td>M</td>\n",
+       "      <td>32768</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.760</td>\n",
+       "      <td>0.688150</td>\n",
+       "      <td>0.425732</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -390,13 +402,15 @@
        "  LLM STRAT BASE MODEL INPUT_TYPE OUTPUT_TYPE  num_ctx  temp    uf1       Mf1  \\\n",
        "0    simple        ll3          S           M    32768   0.1  0.765  0.735293   \n",
        "1    cot1nn        ll3          S           M    32768   0.1  0.715  0.713791   \n",
+       "2    cot1p1        ll3          S           M    32768   0.1  0.760  0.688150   \n",
        "\n",
        "        mcc  \n",
        "0  0.470631  \n",
-       "1  0.536269  "
+       "1  0.536269  \n",
+       "2  0.425732  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
