--- a/exps/llms_simple.ipynb
+++ b/exps/llms_simple.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> [BASE MODEL]: ll3\n",
+      "> [INPUT_TYPE]: S\n",
+      "> [OUTPUT_TYPE]: PM, (32 ctx, 0.1 temp)\n",
+      "> Processing input 16 out of 200...\r"
+     ]
+    }
+   ],
    "source": [
     "# Sets ollama instance and run in batch\n",
     "\n",
