Imrpoved system prompt loading

--- a/exps/llms_cot1p1nn.ipynb
+++ b/exps/llms_cot1p1nn.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,10 +75,8 @@
     "samp_size = 5000\n",
     "balanced_data = True\n",
     "max_chars = 22000       # Anything longer than this will be middle-truncated\n",
-    "ss_size = 200\n",
     "\n",
     "## CBR configs\n",
-    "#knn = 1\n",
     "weighted = True\n",
     "summary_mode = False    # Whether to use summaries in the CBR part of the query (ie, finding neighbours)\n",
     "withprepended = True    # Whether to load embeddings that were computed out of texts with preprended patient info\n",
@@ -96,38 +94,30 @@
     "    'drg_mortality': ('euclidean', True, 0.33),\n",
     "    #'drg_code': ('jaccard', False, .07),\n",
     "}\n",
-    "fit_features = False    # Handle to fit dynamic weights\n",
-    "# Params for fitting dynamic weights\n",
-    "prr_delta_weight = 0.1      # .2, .1\n",
-    "prr_score_metric = 'mcc'    # uf1, mf1, mcc\n",
     "\n",
     "## Controls which LLM model to fire\n",
     "base_models = [\n",
-    "    'll3',\n",
+    "    'llama3',\n",
     "    #'medgenius32b',\n",
     "    #'dsmedical8b',\n",
     "    #'biomistral7b'\n",
     "]\n",
-    "input_type = 'S'    # Summaries as input\n",
-    "output_type = {     # Maps type of output with the actual format that will be requested in the query\n",
-    "    'M': {  # Just mortality      \n",
-    "            'type': 'object',\n",
-    "            'properties': {\n",
-    "                'DIES': {\n",
-    "                    'enum': ['YES', 'NO']\n",
-    "                }\n",
-    "            },\n",
-    "            'required': [\n",
-    "                'DIES'\n",
-    "            ]\n",
-    "           },\n",
-    "    }\n",
+    "\n",
+    "## Paths to your system prompt json files\n",
+    "# These should contain dictionaries where keys are short ids for each prompt type, and the values is another dictionary with at least \"prompt\"\n",
+    "sysprompt_in_fpath = pjpath / 'ollama/sysprompts/sysprompt_in.json'\n",
+    "sysprompt_out_fpath = pjpath / 'ollama/sysprompts/sysprompt_out.json'   # Should also contain \"format\" key with the expected output format\n",
+    "\n",
+    "# Type of input and output system prompts. Define only a single value for each.\n",
+    "i_type_id = 'S'\n",
+    "o_type_id = 'M'\n",
     "\n",
     "## LLM params\n",
     "n_ctx = 32      # Context length (x 1024)\n",
     "temp = 0.1      #[0.0, *0.1, 0.3, 0.7, 1.0]   # Temperature option for the LLM. The greater, the more creative the answer (def 0.1)\n",
     "top_k = 20\n",
     "top_p = 0.5\n",
+    "ss_size = 200\n",
     "\n",
     "## Additional data prepro options\n",
     "# This is the collection of columns that contains the relevant patient info that will be provided to the LLM with the text report\n",
@@ -287,18 +277,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> [BASE MODEL]: ll3\n",
+      "> [BASE MODEL]: llama3\n",
       ">> Processing row 200 out of 200\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Fire instance\n",
-    "# NOTE: Assuming fixed input type (S) and output (M)\n",
-    "i_type_id = input_type\n",
-    "o_type_id = 'M'\n",
-    "o_type_format = output_type[o_type_id]\n",
+    "# Sets ollama instance and run\n",
+    "\n",
+    "# First we load the system prompt configs from disk.\n",
+    "# These will be used to build the right system prompt for each experiment\n",
+    "with open(sysprompt_in_fpath, 'r') as ifile:\n",
+    "    sprompt_data_in = json.load(ifile)\n",
+    "\n",
+    "with open(sysprompt_out_fpath, 'r') as ifile:\n",
+    "    sprompt_data_out = json.load(ifile)\n",
+    "\n",
+    "# Getting related prompts for the specified input and output mode\n",
+    "sprompt_in = sprompt_data_in[i_type_id]['prompt']\n",
+    "sprompt_out = sprompt_data_out[o_type_id]['prompt']\n",
+    "o_type_format = sprompt_data_out[o_type_id]['format']\n",
+    "# Builds full system prompt\n",
+    "sprompt = sprompt_in + \" \" + sprompt_out\n",
     "\n",
     "instance = 'http://localhost:11434/api/generate'\n",
     "auth_cookie = ''\n",
@@ -352,8 +353,7 @@
     "        cot1p1_prompt += \"\\nYou will be provided now with a medical case for which the outcome is unkown, but that is similar to both of the examples you were given above. You must decide which of the exemplar cases provided is the most similar to the case with unkown outcome. Use the medical report from the most similar case and its known outcome together with the report of the case with unkown outcome to decide if, for the latter, the patient will die within 30 days after discharge from the hospital.\\n\"\n",
     "        cot1p1_prompt += formatted_input\n",
     "\n",
-    "        model = f'{base_model}_{i_type_id}_{o_type_id}'\n",
-    "        data = {'model': model,  # Explicit model to use\n",
+    "        data = {'model': base_model,  # Explicit model to use\n",
     "            'options': {\n",
     "                'num_ctx': n_ctx * 1024,\n",
     "                'temperature': temp,\n",
@@ -361,7 +361,8 @@
     "                'top_k': top_k,\n",
     "                'top_p': top_p\n",
     "                },\n",
-    "            'keep-alive': -1,  # Keep connection open\n",
+    "            'keep-alive': 0,\n",
+    "            'system': sprompt,\n",
     "            'prompt': cot1p1_prompt,\n",
     "            'stream': False,  # Wait and return all the result at once\n",
     "            'format': o_type_format\n",
