--- a/exps/llms_eval.ipynb
+++ b/exps/llms_eval.ipynb
@@ -70,7 +70,9 @@
     "balanced_data = True\n",
     "\n",
     "base_models = [\n",
-    "    'll3',\n",
+    "    #'ll3',\n",
+    "    'llama3',\n",
+    "    \n",
     "    #'medgenius32b',\n",
     "    #'dsmedical8b',\n",
     "    #'biomistral7b'\n",
@@ -324,6 +326,28 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loads sysprompt definitions to fetch the qualified name of each approach\n",
+    "import json\n",
+    "\n",
+    "sysprompt_in_fpath = pjpath / 'ollama/sysprompts/sysprompt_in.json'\n",
+    "sysprompt_out_fpath = pjpath / 'ollama/sysprompts/sysprompt_out.json'\n",
+    "\n",
+    "with open(sysprompt_in_fpath, 'r') as ifile:\n",
+    "    sprompt_data_in = json.load(ifile)\n",
+    "\n",
+    "with open(sysprompt_out_fpath, 'r') as ifile:\n",
+    "    sprompt_data_out = json.load(ifile)\n",
+    "\n",
+    "sprompt_in_names = {i_type: sprompt_data_in[i_type]['name'] if 'name' in sprompt_data_in[i_type].keys() else i_type for i_type in input_type}\n",
+    "sprompt_out_names = {o_type: sprompt_data_out[o_type]['name'] if 'name' in sprompt_data_out[o_type].keys() else o_type for o_type in output_type}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -361,21 +385,81 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>simple</td>\n",
-       "      <td>ll3</td>\n",
-       "      <td>S</td>\n",
-       "      <td>M</td>\n",
+       "      <td>llama3</td>\n",
+       "      <td>Summaries</td>\n",
+       "      <td>Mortality</td>\n",
        "      <td>32768</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>0.765</td>\n",
-       "      <td>0.735293</td>\n",
-       "      <td>0.470631</td>\n",
+       "      <td>0.775</td>\n",
+       "      <td>0.746557</td>\n",
+       "      <td>0.493160</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>simple</td>\n",
+       "      <td>llama3</td>\n",
+       "      <td>Summaries</td>\n",
+       "      <td>Prognosis + mortality</td>\n",
+       "      <td>32768</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.670</td>\n",
+       "      <td>0.669173</td>\n",
+       "      <td>0.452718</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>simple</td>\n",
+       "      <td>llama3</td>\n",
+       "      <td>Text report</td>\n",
+       "      <td>Mortality</td>\n",
+       "      <td>32768</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.790</td>\n",
+       "      <td>0.764336</td>\n",
+       "      <td>0.528672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>simple</td>\n",
+       "      <td>llama3</td>\n",
+       "      <td>Text report</td>\n",
+       "      <td>Prognosis + mortality</td>\n",
+       "      <td>32768</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.660</td>\n",
+       "      <td>0.659694</td>\n",
+       "      <td>0.450094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>simple</td>\n",
+       "      <td>llama3</td>\n",
+       "      <td>Text report + patient data</td>\n",
+       "      <td>Mortality</td>\n",
+       "      <td>32768</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.785</td>\n",
+       "      <td>0.755952</td>\n",
+       "      <td>0.512326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>simple</td>\n",
+       "      <td>llama3</td>\n",
+       "      <td>Text report + patient data</td>\n",
+       "      <td>Prognosis + mortality</td>\n",
+       "      <td>32768</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.685</td>\n",
+       "      <td>0.684361</td>\n",
+       "      <td>0.490184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
        "      <td>cot1nn</td>\n",
-       "      <td>ll3</td>\n",
-       "      <td>S</td>\n",
-       "      <td>M</td>\n",
+       "      <td>llama3</td>\n",
+       "      <td>Summaries</td>\n",
+       "      <td>Mortality</td>\n",
        "      <td>32768</td>\n",
        "      <td>0.1</td>\n",
        "      <td>0.715</td>\n",
@@ -383,34 +467,44 @@
        "      <td>0.536269</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>7</th>\n",
        "      <td>cot1p1</td>\n",
-       "      <td>ll3</td>\n",
-       "      <td>S</td>\n",
-       "      <td>M</td>\n",
+       "      <td>llama3</td>\n",
+       "      <td>Summaries</td>\n",
+       "      <td>Mortality</td>\n",
        "      <td>32768</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>0.760</td>\n",
-       "      <td>0.688150</td>\n",
-       "      <td>0.425732</td>\n",
+       "      <td>0.765</td>\n",
+       "      <td>0.692720</td>\n",
+       "      <td>0.439523</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  LLM STRAT BASE MODEL INPUT_TYPE OUTPUT_TYPE  num_ctx  temp    uf1       Mf1  \\\n",
-       "0    simple        ll3          S           M    32768   0.1  0.765  0.735293   \n",
-       "1    cot1nn        ll3          S           M    32768   0.1  0.715  0.713791   \n",
-       "2    cot1p1        ll3          S           M    32768   0.1  0.760  0.688150   \n",
+       "  LLM STRAT BASE MODEL                  INPUT_TYPE            OUTPUT_TYPE  \\\n",
+       "0    simple     llama3                   Summaries              Mortality   \n",
+       "1    simple     llama3                   Summaries  Prognosis + mortality   \n",
+       "2    simple     llama3                 Text report              Mortality   \n",
+       "3    simple     llama3                 Text report  Prognosis + mortality   \n",
+       "4    simple     llama3  Text report + patient data              Mortality   \n",
+       "5    simple     llama3  Text report + patient data  Prognosis + mortality   \n",
+       "6    cot1nn     llama3                   Summaries              Mortality   \n",
+       "7    cot1p1     llama3                   Summaries              Mortality   \n",
        "\n",
-       "        mcc  \n",
-       "0  0.470631  \n",
-       "1  0.536269  \n",
-       "2  0.425732  "
+       "   num_ctx  temp    uf1       Mf1       mcc  \n",
+       "0    32768   0.1  0.775  0.746557  0.493160  \n",
+       "1    32768   0.1  0.670  0.669173  0.452718  \n",
+       "2    32768   0.1  0.790  0.764336  0.528672  \n",
+       "3    32768   0.1  0.660  0.659694  0.450094  \n",
+       "4    32768   0.1  0.785  0.755952  0.512326  \n",
+       "5    32768   0.1  0.685  0.684361  0.490184  \n",
+       "6    32768   0.1  0.715  0.713791  0.536269  \n",
+       "7    32768   0.1  0.765  0.692720  0.439523  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,8 +547,8 @@
     "                        res = {\n",
     "                            'LLM STRAT': lleid,\n",
     "                            'BASE MODEL': base_model,\n",
-    "                            'INPUT_TYPE': i_type,\n",
-    "                            'OUTPUT_TYPE': o_type,\n",
+    "                            'INPUT_TYPE': sprompt_in_names[i_type],\n",
+    "                            'OUTPUT_TYPE': sprompt_out_names[o_type],\n",
     "                            'num_ctx': nctx * 1024,\n",
     "                            'temp': temp,\n",
     "                            'uf1': res_uf1,\n",
