--- a/exps/llms_simple.ipynb
+++ b/exps/llms_simple.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,50 +63,26 @@
     "samp_size = 5000\n",
     "balanced_data = True\n",
     "max_chars = 22000       # Anything longer than this will be middle-truncated\n",
-    "ss_size = 200\n",
     "\n",
     "## Controls which LLM model to fire\n",
     "base_models = [\n",
-    "    'll3',\n",
+    "    'llama3'\n",
     "    #'medgenius32b',\n",
     "    #'dsmedical8b',\n",
     "    #'biomistral7b'\n",
     "]\n",
-    "input_type = ['S', 'R', 'RC']    # (R)eport, (R)eport and (C)hart data as json, (S)ummary (this needs to be precomputed!)\n",
-    "output_type = {     # Maps type of output with the actual format that will be requested in the query\n",
-    "    'M': {  # Just mortality      \n",
-    "            'type': 'object',\n",
-    "            'properties': {\n",
-    "                'DIES': {\n",
-    "                    'enum': ['YES', 'NO']\n",
-    "                }\n",
-    "            },\n",
-    "            'required': [\n",
-    "                'DIES'\n",
-    "            ]\n",
-    "           },\n",
-    "    'PM': {  # Prognosis and mortality      \n",
-    "            'type': 'object',\n",
-    "            'properties': {\n",
-    "                'PROGNOSIS': {\n",
-    "                    'type': 'string'\n",
-    "                },\n",
-    "                'DIES': {\n",
-    "                    'enum': ['YES', 'NO']\n",
-    "                }\n",
-    "            },\n",
-    "            'required': [\n",
-    "                'PROGNOSIS',\n",
-    "                'DIES'\n",
-    "            ]\n",
-    "            },\n",
-    "    }\n",
+    "\n",
+    "## Paths to your system prompt json files\n",
+    "# These should contain dictionaries where keys are short ids for each prompt type, and the values is another dictionary with at least \"prompt\"\n",
+    "sysprompt_in_fpath = pjpath / 'ollama/sysprompts/sysprompt_in.json'\n",
+    "sysprompt_out_fpath = pjpath / 'ollama/sysprompts/sysprompt_out.json'   # Should also contain \"format\" key with the expected output format\n",
     "\n",
     "## LLM params. num_ctx and temps admit multiple values, which will be tested as separate experiments in the same run\n",
     "num_ctx = [32]      # Context length (x 1024)\n",
     "temps = [0.1]       #[0.0, *0.1, 0.3, 0.7, 1.0]   # Temperature option for the LLM. The greater, the more creative the answer (def 0.1)\n",
     "top_k = 20\n",
     "top_p = 0.5\n",
+    "ss_size = 200\n",
     "\n",
     "## Additional data prepro options\n",
     "# This is the collection of columns that contains the relevant patient info that will be provided to the LLM with the text report\n",
@@ -410,15 +386,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> [BASE MODEL]: ll3\n",
-      "> [INPUT_TYPE]: S\n",
-      "> [OUTPUT_TYPE]: PM, (32 ctx, 0.1 temp)\n",
-      "> Processing input 16 out of 200...\r"
+      "> [BASE MODEL]: llama3\n",
+      "> [EXP INFO] IN: S, OUT: M, (32 ctx, 0.1 temp)\n",
+      "> Processing input 200 out of 200...\n",
+      "\n",
+      "> [EXP INFO] IN: S, OUT: PM, (32 ctx, 0.1 temp)\n",
+      "> Processing input 200 out of 200...\n",
+      "\n",
+      "> [EXP INFO] IN: R, OUT: M, (32 ctx, 0.1 temp)\n",
+      "> Processing input 200 out of 200...\n",
+      "\n",
+      "> [EXP INFO] IN: R, OUT: PM, (32 ctx, 0.1 temp)\n",
+      "> Processing input 200 out of 200...\n",
+      "\n",
+      "> [EXP INFO] IN: RC, OUT: M, (32 ctx, 0.1 temp)\n",
+      "> Processing input 200 out of 200...\n",
+      "\n",
+      "> [EXP INFO] IN: RC, OUT: PM, (32 ctx, 0.1 temp)\n",
+      "> Processing input 200 out of 200...\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# Sets ollama instance and run in batch\n",
+    "\n",
+    "# First we load the system prompt configs from disk.\n",
+    "# These will be used to build the right system prompt for each experiment\n",
+    "with open(sysprompt_in_fpath, 'r') as ifile:\n",
+    "    sprompt_data_in = json.load(ifile)\n",
+    "\n",
+    "with open(sysprompt_out_fpath, 'r') as ifile:\n",
+    "    sprompt_data_out = json.load(ifile)\n",
     "\n",
     "tests = {}  # Will keep raw responses\n",
     "instance = 'http://localhost:11434/api/generate'\n",
@@ -430,20 +429,18 @@
     "\n",
     "for base_model in base_models:\n",
     "    print(f'> [BASE MODEL]: {base_model}')\n",
-    "\n",
     "    summary_mod = base_model\n",
     "\n",
-    "    for i_type in input_type:\n",
+    "    for i_type_id, i_configs in sprompt_data_in.items():\n",
+    "        # We use a copy of the original test set\n",
+    "        df_test_i = df_test.copy()\n",
     "\n",
-    "        i_type_id = i_type\n",
-    "\n",
-    "        if i_type == 'R':\n",
+    "        if i_type_id == 'R':\n",
     "            # Raw report notes as input\n",
     "            # Preprends patient data to text. Replaces underscore with spaces in both, feature name and value\n",
-    "            df_test_i = df_test.copy()\n",
     "            df_test_i['input_query'] = df_test_i.apply(lambda x: json.dumps({'REPORT': ''.join([f'{p_cremap}: {str(x[p_cname]).replace('_', ' ')}\\n' for p_cname, p_cremap in pdc_remap.items()]) + x['text']}), axis=1)\n",
     "\n",
-    "        elif i_type == 'S':            \n",
+    "        elif i_type_id == 'S':\n",
     "            ## Load summary\n",
     "            sum_model = 'll3'\n",
     "            summary_id = f'summary_S{samp_size}{'_balanced' if balanced_data else ''}_{sum_model}_mc{max_chars}'\n",
@@ -455,34 +452,37 @@
     "                print(f'\\tOriginal text will be used insted...')\n",
     "\n",
     "            # Updates dataframe with summaries (only with the ones available)\n",
-    "            df_test = pd.merge(df_test, df_summaries, left_index=True, right_index=True, how='left')\n",
-    "            df_test['SUMMARY'] = df_test.apply(lambda x: x['text'] if x['SUMMARY'] != x['SUMMARY'] else x['SUMMARY'], axis=1)\n",
+    "            df_test_i = pd.merge(df_test_i, df_summaries, left_index=True, right_index=True, how='left')\n",
+    "            df_test_i['SUMMARY'] = df_test_i.apply(lambda x: x['text'] if x['SUMMARY'] != x['SUMMARY'] else x['SUMMARY'], axis=1)\n",
     "\n",
     "            # Loads summaries middle-truncating long texts...\n",
-    "            df_test['SUMMARY'] = df_test['SUMMARY'].apply(lambda x: x[:(max_chars//2)] + x[-(max_chars//2):] if len(x) > max_chars else x)\n",
+    "            df_test_i['SUMMARY'] = df_test_i['SUMMARY'].apply(lambda x: x[:(max_chars//2)] + x[-(max_chars//2):] if len(x) > max_chars else x)\n",
     "\n",
-    "            df_test_i = df_test.copy()\n",
     "            df_test_i['input_query'] = df_test_i['SUMMARY'].apply(lambda x: json.dumps({'REPORT': x}))\n",
     "\n",
-    "        elif i_type == 'RC':\n",
+    "        elif i_type_id == 'RC':\n",
     "            # Input as json with relevant patient data in separate fields\n",
-    "            df_test_i = df_test.copy()\n",
     "            df_test_i['input_query'] = df_test_i.apply(lambda x: json.dumps({p_cremap: str(x[p_cname]).replace('_', ' ') for p_cname, p_cremap in pdc_remap.items()} | {'REPORT': x['text']}), axis=1)\n",
     "\n",
     "        else:\n",
     "            print(i_type)\n",
     "            raise NotImplementedError\n",
     "\n",
-    "        print(f'> [INPUT_TYPE]: {i_type}')\n",
+    "        for o_type_id, o_configs in sprompt_data_out.items():\n",
+    "            # System prompt info\n",
+    "            sprompt_in = i_configs['prompt']\n",
+    "            sprompt_out = o_configs['prompt']\n",
+    "            o_type_format = o_configs['format']\n",
     "\n",
-    "        for o_type_id, o_type_format in output_type.items():\n",
+    "            # Builds full system prompt\n",
+    "            sprompt = sprompt_in + \" \" + sprompt_out\n",
+    "\n",
     "            for n_ctx, temp in product(num_ctx, temps):\n",
-    "\n",
     "                # Resolves model\n",
     "                # # Models need to be ready in the online instance!\n",
-    "                model = f'{base_model}_{i_type}_{o_type_id}'\n",
+    "                model = base_model\n",
     "\n",
-    "                print(f'> [OUTPUT_TYPE]: {o_type_id}, ({n_ctx} ctx, {temp} temp)')\n",
+    "                print(f'> [EXP INFO] IN: {i_type_id}, OUT: {o_type_id}, ({n_ctx} ctx, {temp} temp)')\n",
     "\n",
     "                responses = {}\n",
     "                i=1\n",
@@ -494,12 +494,13 @@
     "                    data = {'model': model,  # Explicit model to use\n",
     "                            'options': {\n",
     "                                'num_ctx': n_ctx * 1024,\n",
-    "                                'temperature': temp, # 0?\n",
+    "                                'temperature': temp,\n",
     "                                'seed': SEED,\n",
     "                                'top_k': top_k,\n",
     "                                'top_p': top_p\n",
     "                                },\n",
-    "                            'keep-alive': -1,  # Keep connection open\n",
+    "                            'keep-alive': 0,\n",
+    "                            'system': sprompt, \n",
     "                            'prompt': fromatted_input,\n",
     "                            'stream': False,  # Wait and return all the result at once\n",
     "                            'format': o_type_format,\n",
@@ -519,7 +520,7 @@
     "\n",
     "                # Export results\n",
     "                df_responses = pd.DataFrame(responses).T\n",
-    "                test_id = f'{base_model}_{i_type}_{o_type_id}_{n_ctx}k_t{str(temp).replace('.', '')}'\n",
+    "                test_id = f'{base_model}_{i_type_id}_{o_type_id}_{n_ctx}k_t{str(temp).replace('.', '')}'\n",
     "                df_responses.to_csv(res_fpath / f'{test_id}.csv')\n",
     "                tests[test_id] = df_responses\n",
     "                print(f'\\n')"
