--- a/tools/summarizer.ipynb
+++ b/tools/summarizer.ipynb
@@ -92,11 +92,15 @@
     "target_split = False  # Split set from loaded dataframe to generate summaries from. If None, we disregard inner splits and take entries directly from the main loaded dataframe\n",
     "\n",
     "base_models = [\n",
-    "    'll3',\n",
+    "    'llama3',\n",
     "    #'medgenius32b',\n",
     "    #'dsmedical8b',\n",
     "    #'biomistral7b'\n",
     "]\n",
+    "\n",
+    "# Path to json with system prompt\n",
+    "sysprompt_fpath = pjpath / 'ollama/sysprompts/sysprompt_summarizer.json'\n",
+    "\n",
     "\n",
     "# Slice long input: Just keep up to max_words of each text\n",
     "max_chars = 22000\n",
@@ -256,8 +260,193 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> [BASE MODEL]: llama3\n",
+      ">> (!) Text exceeds the max char limit (29875) in entry 23915784. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (29773) in entry 28574130. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (24020) in entry 24314805. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (25576) in entry 25557423. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (44427) in entry 24969636. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23357) in entry 26408323. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (24045) in entry 28861259. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (22379) in entry 21449712. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (29669) in entry 22805151. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (29321) in entry 25260856. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23248) in entry 24966118. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (25715) in entry 21757801. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (28071) in entry 27591411. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (22070) in entry 22993668. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (22196) in entry 28838195. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (26408) in entry 22609366. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (33782) in entry 22229824. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (25630) in entry 25755550. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (24781) in entry 27515077. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (25954) in entry 26892171. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (22710) in entry 24042537. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (34676) in entry 25768118. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (26509) in entry 26595666. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (24202) in entry 21525591. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (26128) in entry 20830648. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (24748) in entry 27471659. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (25586) in entry 20578248. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (25392) in entry 24661516. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (30221) in entry 21104517. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (25020) in entry 28087176. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (30611) in entry 21523075. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23156) in entry 25240844. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (22447) in entry 22535130. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (22504) in entry 27155549. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (25077) in entry 21157378. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (24064) in entry 29863480. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23033) in entry 28646032. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (24733) in entry 29909244. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23471) in entry 27186139. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23170) in entry 25819585. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (22614) in entry 23325976. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23805) in entry 27354002. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (27819) in entry 24330583. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23274) in entry 28670659. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (26466) in entry 20628338. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (22459) in entry 28915157. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (26216) in entry 27896658. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23800) in entry 22318008. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (25229) in entry 24335921. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (27761) in entry 21697602. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (27896) in entry 23250607. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (22199) in entry 27678862. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (26793) in entry 28320584. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (27031) in entry 24289916. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (22317) in entry 27668789. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (26245) in entry 26511191. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23910) in entry 20665070. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23087) in entry 28139067. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (24595) in entry 28096708. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (22288) in entry 21075260. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23593) in entry 29649793. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (29437) in entry 28941647. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (35899) in entry 23261909. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (25641) in entry 20014344. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (22447) in entry 22392646. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (37561) in entry 24189669. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (25409) in entry 25383012. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23450) in entry 22295095. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (24428) in entry 26199593. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23888) in entry 27763080. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (25830) in entry 22886167. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (31078) in entry 29272617. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (33243) in entry 21874245. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (25808) in entry 20410940. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23481) in entry 26449130. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (22774) in entry 20392640. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (22382) in entry 25544605. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (24479) in entry 24562514. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23279) in entry 27292937. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23183) in entry 24695403. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (24544) in entry 23991205. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (22346) in entry 26013247. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> (!) Text exceeds the max char limit (23985) in entry 25421661. Middle-truncating to 22000...\n",
+      "\t... Result truncate: 22000\n",
+      ">> Processing row 2263 out of 5000\r"
+     ]
+    }
+   ],
    "source": [
+    "# Sets ollama instance and run\n",
+    "\n",
+    "# First we load the system prompt configs from disk.\n",
+    "# These will be used to build the right system prompt for each experiment\n",
+    "with open(sysprompt_fpath, 'r') as ifile:\n",
+    "    sprompt_data = json.load(ifile)\n",
+    "\n",
+    "# Getting related prompts for the specified input and output mode\n",
+    "sprompt = sprompt_data['prompt']\n",
+    "\n",
     "instance = 'http://localhost:11434/api/generate'\n",
     "auth_cookie = ''\n",
     "summary_fpath = Path(f'{mimicpath}/summaries')\n",
@@ -268,11 +457,8 @@
     "for base_model in base_models:\n",
     "    print(f'> [BASE MODEL]: {base_model}')\n",
     "\n",
-    "    model = f'{base_model}_summarizer'\n",
-    "\n",
     "    responses = {}\n",
     "    i=1\n",
-    "\n",
     "    # Resolves responses disk path\n",
     "    summary_id = f'summary_S{str(samp_size)}{'_balanced' if balanced_data else ''}{'_sp' + target_split if target_split else ''}_{base_model}_mc{str(max_chars)}{'_ss' + str(subsamp_size) if subsamp_size else ''}'\n",
     "    summary_path = summary_fpath / f'{summary_id}.csv'\n",
@@ -307,7 +493,7 @@
     "\n",
     "        formatted_input = json.dumps({'REPORT': text})\n",
     "        \n",
-    "        data = {'model': model,  # Explicit model to use\n",
+    "        data = {'model': base_model,  # Explicit model to use\n",
     "                'options': {\n",
     "                                'num_ctx': n_ctx * 1024,\n",
     "                                'temperature': temp, # 0?\n",
@@ -315,7 +501,8 @@
     "                                'top_k': top_k,\n",
     "                                'top_p': top_p\n",
     "                                },\n",
-    "                'keep-alive': -1,  # Keep connection open\n",
+    "                'keep-alive': 0,\n",
+    "                'system': sprompt,\n",
     "                'prompt': formatted_input,\n",
     "                'stream': False,  # Wait and return all the result at once\n",
     "                'format': {  # Prognosis and mortality      \n",
