Imrpoved system prompt loading

--- a/exps/llms_cot1nn.ipynb
+++ b/exps/llms_cot1nn.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
     "# This is required for CoT\n",
     "\n",
     "summaries_fpath = mimicpath / 'summaries'\n",
-    "sum_model = 'll3'\n",
+    "sum_model = 'llama3'\n",
     "summary_id = f'summary_S{samp_size}{'_balanced' if balanced_data else ''}_{sum_model}_mc{max_chars}'\n",
     "df_summaries = pd.read_csv(f'{summaries_fpath}/{summary_id}.csv', index_col=0)"
    ]
