--- a/exps/llms_simple.ipynb
+++ b/exps/llms_simple.ipynb
@@ -442,8 +442,7 @@
     "\n",
     "        elif i_type_id == 'S':\n",
     "            ## Load summary\n",
-    "            sum_model = 'll3'\n",
-    "            summary_id = f'summary_S{samp_size}{'_balanced' if balanced_data else ''}_{sum_model}_mc{max_chars}'\n",
+    "            summary_id = f'summary_S{samp_size}{'_balanced' if balanced_data else ''}_{base_model}_mc{max_chars}'\n",
     "            df_summaries = pd.read_csv(f'{summaries_fpath}/{summary_id}.csv', index_col=0)\n",
     "\n",
     "            missing_summaries = set(df_test.index) - set(df_test.index)\n",
